Created TradeStationClient module to interact with all TradeStation APIs.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,52 @@
 TRADESTATION_CLIENT_ID=xxxxxxxxxx
 TRADESTATION_CLIENT_SECRET=xxxxxxxxxx
 TRADESTATION_REFRESH_TOKEN=xxxxxxxxxx
+
+# Use sandbox/simulation environment (true) or production (false)
+# Default: false
+TRADESTATION_USE_SANDBOX=false
+
+# -----------------------------------------------------------------------------
+# Logging Configuration
+# -----------------------------------------------------------------------------
+# Valid levels: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# Default: INFO
+LOG_LEVEL=INFO
+
+# -----------------------------------------------------------------------------
+# Market Hours Warnings
+# -----------------------------------------------------------------------------
+# Show warnings when fetching data while market is closed
+# Set to 'false' to suppress warnings globally
+# Default: true
+TS_WARN_MARKET_HOURS=true
+
+# -----------------------------------------------------------------------------
+# TradeStation Client Test Configuration
+# -----------------------------------------------------------------------------
+# These control the behavior of: python -m src.ingestion.tradestation_client
+# Command-line arguments override these settings
+
+# Which test to run: all, quote, bars, options, search, market-hours, depth
+# Default: all
+TS_TEST=all
+
+# Symbol(s) to test with (comma-separated for multiple)
+# Default: SPY
+TS_SYMBOL=SPY
+
+# Number of bars to retrieve
+# Default: 5
+TS_BARS_BACK=5
+
+# Bar interval (1, 5, 15, 60, etc.)
+# Default: 1
+TS_INTERVAL=1
+
+# Bar time unit: Minute, Daily, Weekly, Monthly
+# Default: Daily
+TS_UNIT=Daily
+
+# Search query for symbol search test
+# Default: Apple
+TS_QUERY=Apple
