Created streaming and backfill engines.

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,22 @@ TS_UNIT=Daily
 # Search query for symbol search test
 # Default: Apple
 TS_QUERY=Apple
+
+# -----------------------------------------------------------------------------
+# Streaming Engine Configuration
+# -----------------------------------------------------------------------------
+STREAM_UNDERLYING=SPY
+STREAM_EXPIRATIONS=3
+STREAM_STRIKE_DISTANCE=10.0
+STREAM_POLL_INTERVAL=5
+
+# -----------------------------------------------------------------------------
+# Streaming Backfill Configuration
+# -----------------------------------------------------------------------------
+BACKFILL_UNDERLYING=SPY
+BACKFILL_LOOKBACK_DAYS=1
+BACKFILL_INTERVAL=5
+BACKFILL_UNIT=Minute
+BACKFILL_EXPIRATIONS=3
+BACKFILL_STRIKE_DISTANCE=10.0
+BACKFILL_SAMPLE_EVERY=1
