Created main ingestion engine and database connector.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
     "pandas>=2.0.0",
     "websocket-client>=1.6.0",
+    "boto3>=1.28.0",
+    "pytz>=2023.3",
 ]
 
 [project.optional-dependencies]
