Database storage - Fully implemented with buffering and aggregation. Schema comments - Updated to reflect RAW values, added delta views. 1-minute aggregation - Complete implementation with bucket logic. Timezone handling - Proper pytz usage throughout. build_option_symbol() - Fixed decimal formatting. Database init - Added checks and warnings. Data validation - Complete validation utilities module. Memory leak fix - Added cleanup for expired strikes. Connection pool - Proper cleanup in signal handlers. Centralized config - All constants in config.py.

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # Documentation: https://api.tradestation.com/docs/fundamentals/authentication/auth-overview/
 #
 # TRADESTATION_CLIENT_ID     - "client ID" or "API key" provided by TradeStation
-# TRADESTATION_CLIENT_SECRET - secret for the API key provided by TradeStation - can be rotatated by
+# TRADESTATION_CLIENT_SECRET - secret for the API key provided by TradeStation - can be rotated by
 #                              contacting Client Service
 # TRADESTATION_REFRESH_TOKEN - refresh token granted during the authorization code flow (see
 #                              https://api.tradestation.com/docs/fundamentals/authentication/refresh-tokens
@@ -64,20 +64,288 @@ TS_UNIT=Daily
 TS_QUERY=Apple
 
 # -----------------------------------------------------------------------------
-# Streaming Engine Configuration
+# API Request Configuration
 # -----------------------------------------------------------------------------
-STREAM_UNDERLYING=SPY
-STREAM_EXPIRATIONS=3
-STREAM_STRIKE_DISTANCE=10.0
-STREAM_POLL_INTERVAL=5
+# Timeout for API requests (seconds)
+# Default: 30
+API_REQUEST_TIMEOUT=30
+
+# Number of retry attempts for failed requests
+# Default: 3
+API_RETRY_ATTEMPTS=3
+
+# Initial delay between retries (seconds)
+# Default: 1.0
+API_RETRY_DELAY=1.0
+
+# Backoff multiplier for exponential retry delay
+# Example: attempt 1 = 1s, attempt 2 = 2s, attempt 3 = 4s
+# Default: 2.0
+API_RETRY_BACKOFF=2.0
+
+# Batch size for quote requests (max 500 per TradeStation API)
+# Default: 100
+QUOTE_BATCH_SIZE=100
+
+# Batch size for option quote requests
+# Default: 100
+OPTION_BATCH_SIZE=100
+
+# Delay between batches of requests (seconds)
+# Default: 0.5
+DELAY_BETWEEN_BATCHES=0.5
+
+# Delay between processing bars during backfill (seconds)
+# Default: 1.0
+DELAY_BETWEEN_BARS=1.0
 
 # -----------------------------------------------------------------------------
-# Streaming Backfill Configuration
+# Database Configuration
 # -----------------------------------------------------------------------------
+# Database connection details
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=zerogex
+DB_USER=postgres
+
+# Database password provider: 'aws_secrets_manager' or 'env'
+# Default: aws_secrets_manager
+DB_PASSWORD_PROVIDER=aws_secrets_manager
+
+# If using 'env' provider, set password directly (NOT RECOMMENDED for production)
+# DB_PASSWORD=your_password_here
+
+# If using 'aws_secrets_manager' provider
+DB_SECRET_NAME=zerogex/db/password
+AWS_REGION=us-east-1
+
+# Connection pool configuration
+# Default min: 1, max: 10
+DB_POOL_MIN=1
+DB_POOL_MAX=10
+
+# Data retention period (days)
+# Default: 90
+DATA_RETENTION_DAYS=90
+
+# -----------------------------------------------------------------------------
+# Streaming Configuration
+# -----------------------------------------------------------------------------
+# Underlying symbol to stream
+# Default: SPY
+STREAM_UNDERLYING=SPY
+
+# Number of expiration dates to track
+# Default: 3
+STREAM_EXPIRATIONS=3
+
+# Strike distance from current price (dollars)
+# Default: 10.0
+STREAM_STRIKE_DISTANCE=10.0
+
+# Poll interval during regular market hours (seconds)
+# Default: 5
+MARKET_HOURS_POLL_INTERVAL=5
+
+# Poll interval during extended hours (pre-market, after-hours) (seconds)
+# Default: 30
+EXTENDED_HOURS_POLL_INTERVAL=30
+
+# Poll interval when market is closed (seconds)
+# Default: 300 (5 minutes)
+CLOSED_HOURS_POLL_INTERVAL=300
+
+# How often to recalculate tracked strikes (iterations)
+# Default: 10
+STRIKE_RECALC_INTERVAL=10
+
+# Price movement threshold to trigger strike recalculation (dollars)
+# Default: 1.0
+PRICE_MOVE_THRESHOLD=1.0
+
+# How often to cleanup expired strikes (iterations)
+# Default: 100
+STRIKE_CLEANUP_INTERVAL=100
+
+# -----------------------------------------------------------------------------
+# Backfill Configuration
+# -----------------------------------------------------------------------------
+# Underlying symbol to backfill
+# Default: SPY
 BACKFILL_UNDERLYING=SPY
+
+# Number of days to look back
+# Default: 1
 BACKFILL_LOOKBACK_DAYS=1
+
+# Bar interval for backfill (1, 5, 15, 60, etc.)
+# Default: 5
 BACKFILL_INTERVAL=5
+
+# Bar time unit for backfill: Minute, Daily, Weekly, Monthly
+# Default: Minute
 BACKFILL_UNIT=Minute
+
+# Number of expirations to backfill
+# Default: 3
 BACKFILL_EXPIRATIONS=3
+
+# Strike distance for backfill (dollars)
+# Default: 10.0
 BACKFILL_STRIKE_DISTANCE=10.0
+
+# Sample options every N bars (1 = every bar, 10 = every 10th bar)
+# Higher values = faster backfill, less granular data
+# Default: 1
 BACKFILL_SAMPLE_EVERY=1
+
+# Automatically backfill gaps on startup
+# Default: true
+BACKFILL_ON_STARTUP=true
+
+# Maximum gap size to auto-backfill (minutes)
+# Gaps larger than this will be logged but not automatically filled
+# Default: 60 (1 hour)
+MAX_GAP_MINUTES=60
+
+# Backfill chunk size (bars per chunk)
+# Default: 1000
+BACKFILL_CHUNK_SIZE=1000
+
+# -----------------------------------------------------------------------------
+# Main Ingestion Engine Configuration
+# -----------------------------------------------------------------------------
+# Underlying symbol for main engine
+# Default: SPY
+INGEST_UNDERLYING=SPY
+
+# Number of expirations to track
+# Default: 3
+INGEST_EXPIRATIONS=3
+
+# Strike distance from current price (dollars)
+# Default: 10.0
+INGEST_STRIKE_DISTANCE=10.0
+
+# Number of days to backfill on startup
+# Default: 7
+INGEST_LOOKBACK_DAYS=7
+
+# -----------------------------------------------------------------------------
+# Data Aggregation Configuration
+# -----------------------------------------------------------------------------
+# Time bucket size for aggregation (seconds)
+# Default: 60 (1 minute)
+AGGREGATION_BUCKET_SECONDS=60
+
+# Maximum buffer size before forcing flush
+# Default: 1000
+MAX_BUFFER_SIZE=1000
+
+# Buffer flush interval (seconds)
+# Flush buffers if no data received for this duration
+# Default: 60
+BUFFER_FLUSH_INTERVAL=60
+
+# -----------------------------------------------------------------------------
+# Monitoring & Alerting Configuration
+# -----------------------------------------------------------------------------
+# Health check interval (seconds)
+# Default: 60
+HEALTH_CHECK_INTERVAL=60
+
+# Underlying data staleness threshold (seconds)
+# Alert if no underlying data received for this duration
+# Default: 300 (5 minutes)
+UNDERLYING_STALE_THRESHOLD=300
+
+# Option data staleness threshold (seconds)
+# Alert if no option data received for this duration
+# Default: 600 (10 minutes)
+OPTION_STALE_THRESHOLD=600
+
+# Number of consecutive failures before alerting
+# Default: 5
+CONSECUTIVE_FAILURES_ALERT=5
+
+# Error rate threshold for alerting (percentage)
+# Default: 0.1 (10%)
+ERROR_RATE_ALERT_THRESHOLD=0.1
+
+# -----------------------------------------------------------------------------
+# WebSocket Configuration (Future Enhancement)
+# -----------------------------------------------------------------------------
+# Enable WebSocket streaming instead of polling
+# Default: false
+WEBSOCKET_ENABLED=false
+
+# WebSocket reconnection delay (seconds)
+# Default: 5.0
+WEBSOCKET_RECONNECT_DELAY=5.0
+
+# WebSocket ping interval (seconds)
+# Default: 30
+WEBSOCKET_PING_INTERVAL=30
+
+# Maximum WebSocket reconnection attempts
+# Default: 10
+WEBSOCKET_MAX_RECONNECT_ATTEMPTS=10
+
+# -----------------------------------------------------------------------------
+# GEX Calculation Configuration (Future Enhancement)
+# -----------------------------------------------------------------------------
+# Enable real-time GEX calculations
+# Default: false
+GEX_ENABLED=false
+
+# GEX calculation interval (seconds)
+# Default: 60
+GEX_CALCULATION_INTERVAL=60
+
+# Strike range for GEX calculation (dollars from current price)
+# Default: 50.0
+GEX_STRIKE_RANGE=50.0
+
+# Enable Greeks calculation (delta, gamma, theta, vega)
+# Default: false
+GREEKS_ENABLED=false
+
+# Risk-free rate for Greeks calculation
+# Default: 0.05 (5%)
+RISK_FREE_RATE=0.05
+
+# Default implied volatility if not available from API
+# Default: 0.20 (20%)
+IMPLIED_VOLATILITY_DEFAULT=0.20
+
+# -----------------------------------------------------------------------------
+# Grafana/Metrics Configuration (Future Enhancement)
+# -----------------------------------------------------------------------------
+# Enable Prometheus metrics endpoint
+# Default: false
+METRICS_ENABLED=false
+
+# Port for Prometheus metrics endpoint
+# Default: 9090
+METRICS_PORT=9090
+
+# Enable Grafana dashboard integration
+# Default: false
+GRAFANA_DASHBOARD_ENABLED=false
+
+# -----------------------------------------------------------------------------
+# Example Production Configuration
+# -----------------------------------------------------------------------------
+# For production deployment, you might use:
+#
+# LOG_LEVEL=INFO
+# API_RETRY_ATTEMPTS=5
+# MARKET_HOURS_POLL_INTERVAL=1
+# EXTENDED_HOURS_POLL_INTERVAL=10
+# INGEST_LOOKBACK_DAYS=30
+# BACKFILL_ON_STARTUP=true
+# WEBSOCKET_ENABLED=true
+# GEX_ENABLED=true
+# METRICS_ENABLED=true
+# GRAFANA_DASHBOARD_ENABLED=true
+# DB_PASSWORD_PROVIDER=aws_secrets_manager
