Updated database connection to use .pgpass.

--- a/.env.example
+++ b/.env.example
@@ -108,16 +108,33 @@ DB_PORT=5432
 DB_NAME=zerogex
 DB_USER=postgres
 
-# Database password provider: 'aws_secrets_manager' or 'env'
-# Default: aws_secrets_manager
-DB_PASSWORD_PROVIDER=aws_secrets_manager
+# Database password provider: 'pgpass', 'aws_secrets_manager', or 'env'
+#
+# RECOMMENDED: 'pgpass' (default)
+# - Uses ~/.pgpass file (PostgreSQL standard)
+# - No password in code or environment variables
+# - Secure file permissions (600) enforced by PostgreSQL
+# - Setup:
+#     1. Create ~/.pgpass with: hostname:port:database:username:password
+#     2. Set permissions: chmod 600 ~/.pgpass
+#
+# For AWS RDS: 'aws_secrets_manager'
+# - Retrieves password from AWS Secrets Manager
+# - Requires DB_SECRET_NAME and AWS_REGION
+#
+# For development only: 'env'
+# - Reads password directly from DB_PASSWORD
+# - NOT RECOMMENDED for production
+#
+# Default: pgpass
+DB_PASSWORD_PROVIDER=pgpass
 
-# If using 'env' provider, set password directly (NOT RECOMMENDED for production)
+# If using 'env' provider (NOT RECOMMENDED for production)
 # DB_PASSWORD=your_password_here
 
 # If using 'aws_secrets_manager' provider
-DB_SECRET_NAME=zerogex/db/password
-AWS_REGION=us-east-1
+# DB_SECRET_NAME=zerogex/db/password
+# AWS_REGION=us-east-1
 
 # Connection pool configuration
 # Default min: 1, max: 10
