Added Greeks calculation and integration with Ingestion Engine.

--- a/.env.example
+++ b/.env.example
@@ -323,16 +323,21 @@ GEX_CALCULATION_INTERVAL=60
 # Default: 50.0
 GEX_STRIKE_RANGE=50.0
 
-# Enable Greeks calculation (delta, gamma, theta, vega)
+# -----------------------------------------------------------------------------
+# Greeks Calculation Configuration
+# -----------------------------------------------------------------------------
+# Enable real-time Greeks calculations
 # Default: false
-GREEKS_ENABLED=false
+GREEKS_ENABLED=true
 
-# Risk-free rate for Greeks calculation
-# Default: 0.05 (5%)
+# Risk-free rate for Greeks calculation (annual rate)
+# Example: 0.05 = 5% annual risk-free rate
+# Default: 0.05
 RISK_FREE_RATE=0.05
 
 # Default implied volatility if not available from API
-# Default: 0.20 (20%)
+# Example: 0.20 = 20% volatility
+# Default: 0.20
 IMPLIED_VOLATILITY_DEFAULT=0.20
 
 # -----------------------------------------------------------------------------
