Corrected streaming method for the TradeStation API.

--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ TS_WARN_MARKET_HOURS=true
 # These control the behavior of: python -m src.ingestion.tradestation_client
 # Command-line arguments override these settings
 
-# Which test to run: all, quote, bars, options, search, market-hours, depth
+# Which test to run: all, quote, bars, stream-bars, options, search, market-hours, depth
 # Default: all
 TS_TEST=all
 
@@ -146,7 +146,7 @@ DB_POOL_MAX=10
 DATA_RETENTION_DAYS=90
 
 # -----------------------------------------------------------------------------
-# Streaming Configuration
+# Streaming Configuration (Real-Time Data)
 # -----------------------------------------------------------------------------
 # Underlying symbol to stream
 # Default: SPY
@@ -185,8 +185,11 @@ PRICE_MOVE_THRESHOLD=1.0
 STRIKE_CLEANUP_INTERVAL=100
 
 # -----------------------------------------------------------------------------
-# Backfill Configuration
+# Backfill Configuration (Historical Data - Run Independently)
 # -----------------------------------------------------------------------------
+# IMPORTANT: Backfill is now INDEPENDENT and should be run separately
+# Use: python -m src.ingestion.backfill_manager [options]
+
 # Underlying symbol to backfill
 # Default: SPY
 BACKFILL_UNDERLYING=SPY
@@ -196,8 +199,8 @@ BACKFILL_UNDERLYING=SPY
 BACKFILL_LOOKBACK_DAYS=1
 
 # Bar interval for backfill (1, 5, 15, 60, etc.)
-# Default: 5
-BACKFILL_INTERVAL=5
+# Default: 1
+BACKFILL_INTERVAL=1
 
 # Bar time unit for backfill: Minute, Daily, Weekly, Monthly
 # Default: Minute
@@ -216,21 +219,8 @@ BACKFILL_STRIKE_DISTANCE=10.0
 # Default: 1
 BACKFILL_SAMPLE_EVERY=1
 
-# Automatically backfill gaps on startup
-# Default: true
-BACKFILL_ON_STARTUP=true
-
-# Maximum gap size to auto-backfill (minutes)
-# Gaps larger than this will be logged but not automatically filled
-# Default: 60 (1 hour)
-MAX_GAP_MINUTES=60
-
-# Backfill chunk size (bars per chunk)
-# Default: 1000
-BACKFILL_CHUNK_SIZE=1000
-
 # -----------------------------------------------------------------------------
-# Main Ingestion Engine Configuration
+# Main Ingestion Engine Configuration (Forward-Only)
 # -----------------------------------------------------------------------------
 # Underlying symbol for main engine
 # Default: SPY
@@ -243,10 +233,6 @@ INGEST_EXPIRATIONS=3
 # Strike distance from current price (dollars)
 # Default: 10.0
 INGEST_STRIKE_DISTANCE=10.0
-
-# Number of days to backfill on startup
-# Default: 7
-INGEST_LOOKBACK_DAYS=7
 
 # -----------------------------------------------------------------------------
 # Data Aggregation Configuration
@@ -327,7 +313,7 @@ GEX_STRIKE_RANGE=50.0
 # Greeks Calculation Configuration
 # -----------------------------------------------------------------------------
 # Enable real-time Greeks calculations
-# Default: false
+# Default: true
 GREEKS_ENABLED=true
 
 # Risk-free rate for Greeks calculation (annual rate)
@@ -364,10 +350,12 @@ GRAFANA_DASHBOARD_ENABLED=false
 # API_RETRY_ATTEMPTS=5
 # MARKET_HOURS_POLL_INTERVAL=1
 # EXTENDED_HOURS_POLL_INTERVAL=10
-# INGEST_LOOKBACK_DAYS=30
-# BACKFILL_ON_STARTUP=true
 # WEBSOCKET_ENABLED=true
 # GEX_ENABLED=true
+# GREEKS_ENABLED=true
 # METRICS_ENABLED=true
 # GRAFANA_DASHBOARD_ENABLED=true
 # DB_PASSWORD_PROVIDER=aws_secrets_manager
+#
+# IMPORTANT: Run backfill independently for historical data:
+#   python -m src.ingestion.backfill_manager --lookback-days 30
