Added IV Calculator. Consolidated run.py and manage_service.sh functionality into Makefile.

--- a/.env.example
+++ b/.env.example
@@ -310,18 +310,29 @@ GEX_CALCULATION_INTERVAL=60
 GEX_STRIKE_RANGE=50.0
 
 # -----------------------------------------------------------------------------
-# Greeks Calculation Configuration
+# Greeks & IV Calculation Configuration
 # -----------------------------------------------------------------------------
 # Enable real-time Greeks calculations
 # Default: true
 GREEKS_ENABLED=true
+
+# Enable real-time IV calculation from option prices
+# If false, will only use IV provided by API or default IV
+# Default: true
+IV_CALCULATION_ENABLED=true
+
+# IV Solver Configuration
+IV_MAX_ITERATIONS=100
+IV_TOLERANCE=0.00001
+IV_MIN=0.01
+IV_MAX=5.0
 
 # Risk-free rate for Greeks calculation (annual rate)
 # Example: 0.05 = 5% annual risk-free rate
 # Default: 0.05
 RISK_FREE_RATE=0.05
 
-# Default implied volatility if not available from API
+# Default implied volatility if not available from API or calculation
 # Example: 0.20 = 20% volatility
 # Default: 0.20
 IMPLIED_VOLATILITY_DEFAULT=0.20
