Added AnalyticsEngine. Corrected IngestionEngine OI capture.

--- a/.env.example
+++ b/.env.example
@@ -295,19 +295,13 @@ WEBSOCKET_PING_INTERVAL=30
 WEBSOCKET_MAX_RECONNECT_ATTEMPTS=10
 
 # -----------------------------------------------------------------------------
-# GEX Calculation Configuration (Future Enhancement)
+# Analytics Engine Configuration
 # -----------------------------------------------------------------------------
-# Enable real-time GEX calculations
-# Default: false
-GEX_ENABLED=false
+# Underlying symbol to analyze
+ANALYTICS_UNDERLYING=SPY
 
-# GEX calculation interval (seconds)
-# Default: 60
-GEX_CALCULATION_INTERVAL=60
-
-# Strike range for GEX calculation (dollars from current price)
-# Default: 50.0
-GEX_STRIKE_RANGE=50.0
+# Calculation interval (seconds)
+ANALYTICS_INTERVAL=60
 
 # -----------------------------------------------------------------------------
 # Greeks & IV Calculation Configuration
