Convert TradeStation sessiontemplate param into configurable env var.

--- a/.env.example
+++ b/.env.example
@@ -184,6 +184,10 @@ PRICE_MOVE_THRESHOLD=1.0
 # Default: 100
 STRIKE_CLEANUP_INTERVAL=100
 
+# Session template for streaming data
+# Options: Default (9:30-16:00), USEQPre (4:00-9:30), USEQ24Hour (4:00-20:00)
+SESSION_TEMPLATE=Default
+
 # -----------------------------------------------------------------------------
 # Backfill Configuration (Historical Data - Run Independently)
 # -----------------------------------------------------------------------------
