--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "zerogex"
+name = "zerogex-oa"
 version = "0.2.0"
 description = "ZeroGEX Options Analytics Platform - Real-time gamma exposure calculations"
 readme = "README.md"
@@ -63,7 +63,7 @@ greeks = [
     "py_vollib>=1.0.1",
 ]
 all = [
-    "zerogex[dev,metrics,greeks]",
+    "zerogex-oa[dev,metrics,greeks]",
 ]
 
 [project.urls]
