--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,10 @@ dependencies = [
     "pytz>=2023.3",
     "numpy>=1.24.0",
     "scipy>=1.11.0",
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "asyncpg>=0.29.0",
+    "pydantic>=2.5.0",
 ]
 
 [project.optional-dependencies]
@@ -62,8 +66,14 @@ greeks = [
     "scipy>=1.11.0",
     "py_vollib>=1.0.1",
 ]
+api = [
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "asyncpg>=0.29.0",
+    "pydantic>=2.5.0",
+]
 all = [
-    "zerogex-oa[dev,metrics,greeks]",
+    "zerogex-oa[dev,metrics,greeks,api]",
 ]
 
 [project.urls]
